Update lists at 20250209-0300

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -119,6 +119,7 @@ allow 114.35.245.150;
 allow 118.163.74.160;
 allow 121.127.37.151;
 allow 121.78.28.166;
+allow 123.253.35.32;
 allow 125.212.241.131;
 allow 128.127.180.156;
 allow 128.31.0.13;
@@ -623,7 +624,6 @@ allow 193.189.100.203;
 allow 193.189.100.204;
 allow 193.189.100.205;
 allow 193.189.100.206;
-allow 193.218.118.133;
 allow 193.218.118.137;
 allow 193.218.118.173;
 allow 193.218.118.178;
@@ -1062,7 +1062,6 @@ allow 2a01:6340:2:501::20;
 allow 2a01:7e00::f03c:91ff:fe56:2656;
 allow 2a01:7e00::f03c:91ff:fe78:b382;
 allow 2a02:16d0:0:5::1;
-allow 2a02:2970:1001::4b;
 allow 2a02:2b88:2:48b::1;
 allow 2a02:2b88:2:6ce::1;
 allow 2a02:418:6017::147;
@@ -1128,6 +1127,7 @@ allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:105:78fc::1;
 allow 2a04:52c0:105:98a3::1;
+allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394::1;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -1413,7 +1413,6 @@ allow 2a0f:df00:0:255::203;
 allow 2a0f:df00:0:255::204;
 allow 2a0f:df00:0:255::205;
 allow 2a0f:df00:0:255::206;
-allow 2a0f:e586:f:f::133;
 allow 2a0f:e586:f:f::182;
 allow 2a0f:e586:f:f::188;
 allow 2a0f:e586:f:f:a052:2166:bef9:a432;
@@ -1556,6 +1555,7 @@ allow 45.80.158.27;
 allow 45.80.158.69;
 allow 45.8.22.207;
 allow 45.83.104.137;
+allow 45.83.21.193;
 allow 45.84.107.101;
 allow 45.84.107.172;
 allow 45.84.107.182;
@@ -1573,7 +1573,6 @@ allow 45.95.169.130;
 allow 45.95.169.230;
 allow 45.95.169.255;
 allow 46.165.243.36;
-allow 46.182.21.248;
 allow 46.232.251.191;
 allow 46.234.47.105;
 allow 5.104.86.6;
@@ -1587,6 +1586,7 @@ allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.255.100.219;
 allow 5.255.100.227;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.235;
@@ -1625,7 +1625,6 @@ allow 5.45.98.162;
 allow 5.79.66.19;
 allow 62.133.45.2;
 allow 62.171.137.169;
-allow 62.182.84.146;
 allow 64.190.76.2;
 allow 64.190.76.3;
 allow 64.190.76.4;
