--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -12,7 +12,6 @@ set_real_ip_from 103.251.167.20;
 set_real_ip_from 104.167.242.116;
 set_real_ip_from 104.167.242.117;
 set_real_ip_from 104.167.242.118;
-set_real_ip_from 104.168.144.253;
 set_real_ip_from 104.192.3.74;
 set_real_ip_from 104.219.236.100;
 set_real_ip_from 104.244.72.115;
@@ -610,7 +609,6 @@ set_real_ip_from 192.42.116.27;
 set_real_ip_from 192.42.116.28;
 set_real_ip_from 192.99.149.111;
 set_real_ip_from 193.105.134.150;
-set_real_ip_from 193.105.134.155;
 set_real_ip_from 193.189.100.194;
 set_real_ip_from 193.189.100.195;
 set_real_ip_from 193.189.100.196;
@@ -869,10 +867,12 @@ set_real_ip_from 23.137.253.27;
 set_real_ip_from 23.137.254.137;
 set_real_ip_from 23.153.248.33;
 set_real_ip_from 23.153.248.34;
+set_real_ip_from 23.154.177.10;
 set_real_ip_from 23.154.177.11;
 set_real_ip_from 23.154.177.12;
 set_real_ip_from 23.154.177.13;
 set_real_ip_from 23.154.177.14;
+set_real_ip_from 23.154.177.15;
 set_real_ip_from 23.154.177.16;
 set_real_ip_from 23.154.177.17;
 set_real_ip_from 23.154.177.18;
@@ -1027,7 +1027,6 @@ set_real_ip_from 2607:5300:205:200::4894;
 set_real_ip_from 2607:5300:60:566f::1;
 set_real_ip_from 2607:5300:61:785::;
 set_real_ip_from 2607:5300:61:785:1:2:3:4;
-set_real_ip_from 2607:5501:3000:1dc::2;
 set_real_ip_from 2607:f130:0:ed:216:3cff:febd:3b42;
 set_real_ip_from 2607:f530:8002::19;
 set_real_ip_from 2620:18c:0:192::171;
@@ -1059,6 +1058,7 @@ set_real_ip_from 2a01:6340:2:501::20;
 set_real_ip_from 2a01:7e00::f03c:91ff:fe56:2656;
 set_real_ip_from 2a01:7e00::f03c:91ff:fe78:b382;
 set_real_ip_from 2a02:16d0:0:5::1;
+set_real_ip_from 2a02:2970:1001::4b;
 set_real_ip_from 2a02:2b88:2:48b::1;
 set_real_ip_from 2a02:2b88:2:6ce::1;
 set_real_ip_from 2a02:418:6017::147;
@@ -1567,6 +1567,7 @@ set_real_ip_from 45.95.169.130;
 set_real_ip_from 45.95.169.230;
 set_real_ip_from 45.95.169.255;
 set_real_ip_from 46.165.243.36;
+set_real_ip_from 46.182.21.248;
 set_real_ip_from 46.232.251.191;
 set_real_ip_from 46.234.47.105;
 set_real_ip_from 50.6.204.90;
