Update lists at 20250209-1800

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -99,7 +99,6 @@ allow 109.169.33.163;
 allow 109.199.101.106;
 allow 109.199.101.134;
 allow 109.199.105.142;
-allow 109.228.160.26;
 allow 109.69.67.17;
 allow 109.70.100.1;
 allow 109.70.100.2;
@@ -628,7 +627,6 @@ allow 193.218.118.178;
 allow 193.218.118.182;
 allow 193.218.118.188;
 allow 193.218.118.89;
-allow 193.218.118.91;
 allow 193.218.118.94;
 allow 193.237.221.228;
 allow 193.239.232.102;
@@ -670,7 +668,7 @@ allow 195.80.151.242;
 allow 195.88.74.206;
 allow 198.144.178.185;
 allow 198.144.178.187;
-allow 198.167.206.143;
+allow 198.167.206.175;
 allow 198.251.84.163;
 allow 198.251.84.237;
 allow 198.251.88.18;
@@ -859,6 +857,7 @@ allow 23.129.64.171;
 allow 23.129.64.172;
 allow 23.129.64.173;
 allow 23.137.248.100;
+allow 23.137.248.192;
 allow 23.137.250.83;
 allow 23.137.253.108;
 allow 23.137.253.109;
@@ -870,7 +869,6 @@ allow 23.153.248.33;
 allow 23.153.248.34;
 allow 23.154.177.10;
 allow 23.154.177.11;
-allow 23.154.177.12;
 allow 23.154.177.13;
 allow 23.154.177.14;
 allow 23.154.177.15;
@@ -932,6 +930,7 @@ allow 2602:2e5::104;
 allow 2602:f9f3:0:2::319;
 allow 2602:fc24:10:61b::1;
 allow 2602:fc24:12:81a6::1;
+allow 2602:fc24:12:9fef::1;
 allow 2602:fc24:12:a679::1;
 allow 2602:fc24:18:f38f::1;
 allow 2602:fc24:18:f84a::1;
@@ -1353,8 +1352,8 @@ allow 2a0c:5700:3133:1705:be24:11ff:fe37:3cb;
 allow 2a0c:5700:3133:1705:be24:11ff:fe4e:df9e;
 allow 2a0c:5700:3133:1705:be24:11ff:fe58:9714;
 allow 2a0c:5700:3133:1705:be24:11ff:fe87:1bec;
-allow 2a0c:5700:3133:1705:be24:11ff:fe8e:bca;
 allow 2a0c:5700:3133:1705:be24:11ff:fead:5be0;
+allow 2a0c:5700:3133:1705:be24:11ff:feb6:9942;
 allow 2a0c:5700:3133:1705:be24:11ff:fed0:6ed4;
 allow 2a0c:5700:3133:1705:be24:11ff:fed1:b9d9;
 allow 2a0c:5700:3133:1705:be24:11ff:fee1:73d9;
@@ -1365,7 +1364,6 @@ allow 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 allow 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:e300::23;
-allow 2a0d:8140:1fff:4a9a::1;
 allow 2a0d:bbc7:0:1::1df;
 allow 2a0d:bbc7:0:1::254;
 allow 2a0d:bbc7:0:1::320;
@@ -1494,7 +1492,6 @@ allow 45.12.3.80;
 allow 45.128.133.242;
 allow 45.132.246.245;
 allow 45.134.225.36;
-allow 45.137.99.14;
 allow 45.138.16.107;
 allow 45.138.16.113;
 allow 45.138.16.178;
@@ -1550,7 +1547,6 @@ allow 45.80.158.27;
 allow 45.80.158.69;
 allow 45.8.22.207;
 allow 45.83.104.137;
-allow 45.83.21.193;
 allow 45.84.107.101;
 allow 45.84.107.172;
 allow 45.84.107.182;
