--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -127,6 +127,7 @@ deny 2602:2e5::104;
 deny 2602:f9f3:0:2::319;
 deny 2602:fc24:10:61b::1;
 deny 2602:fc24:12:81a6::1;
+deny 2602:fc24:12:9fef::1;
 deny 2602:fc24:12:a679::1;
 deny 2602:fc24:18:f38f::1;
 deny 2602:fc24:18:f84a::1;
@@ -547,8 +548,8 @@ deny 2a0c:5700:3133:1705:be24:11ff:fe37:3cb;
 deny 2a0c:5700:3133:1705:be24:11ff:fe4e:df9e;
 deny 2a0c:5700:3133:1705:be24:11ff:fe58:9714;
 deny 2a0c:5700:3133:1705:be24:11ff:fe87:1bec;
-deny 2a0c:5700:3133:1705:be24:11ff:fe8e:bca;
 deny 2a0c:5700:3133:1705:be24:11ff:fead:5be0;
+deny 2a0c:5700:3133:1705:be24:11ff:feb6:9942;
 deny 2a0c:5700:3133:1705:be24:11ff:fed0:6ed4;
 deny 2a0c:5700:3133:1705:be24:11ff:fed1:b9d9;
 deny 2a0c:5700:3133:1705:be24:11ff:fee1:73d9;
@@ -559,7 +560,6 @@ deny 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 deny 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 deny 2a0c:5cc0:1:1::293c:1518;
 deny 2a0c:e300::23;
-deny 2a0d:8140:1fff:4a9a::1;
 deny 2a0d:bbc7:0:1::1df;
 deny 2a0d:bbc7:0:1::254;
 deny 2a0d:bbc7:0:1::320;
