--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -515,6 +515,7 @@ deny 185.254.196.141;
 deny 185.34.33.2;
 deny 185.35.202.222;
 deny 185.38.175.133;
+deny 185.39.207.83;
 deny 185.40.4.100;
 deny 185.40.4.101;
 deny 185.40.4.127;
@@ -528,7 +529,6 @@ deny 185.40.4.38;
 deny 185.40.4.44;
 deny 185.40.4.64;
 deny 185.40.4.92;
-deny 185.42.170.203;
 deny 185.56.171.94;
 deny 185.56.83.83;
 deny 185.67.82.114;
@@ -549,6 +549,7 @@ deny 192.108.48.150;
 deny 192.210.160.31;
 deny 192.210.214.10;
 deny 192.210.255.47;
+deny 192.227.169.204;
 deny 192.3.141.157;
 deny 192.3.173.79;
 deny 192.3.228.229;
@@ -869,6 +870,7 @@ deny 23.153.248.33;
 deny 23.153.248.34;
 deny 23.154.177.10;
 deny 23.154.177.11;
+deny 23.154.177.12;
 deny 23.154.177.13;
 deny 23.154.177.14;
 deny 23.154.177.15;
@@ -1137,6 +1139,7 @@ deny 2a04:9dc0:31::c0cc:4d;
 deny 2a05:541:110:20::1;
 deny 2a05:541:110:3e::1;
 deny 2a05:541:112:31::1;
+deny 2a05:541:122:49::1;
 deny 2a05:b0c7:6388::1;
 deny 2a05:b0c7:655b::1;
 deny 2a05:b0c7:67c6::1;
@@ -1364,6 +1367,7 @@ deny 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 deny 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 deny 2a0c:5cc0:1:1::293c:1518;
 deny 2a0c:e300::23;
+deny 2a0d:8140:1fff:4a9a::1;
 deny 2a0d:bbc7:0:1::1df;
 deny 2a0d:bbc7:0:1::254;
 deny 2a0d:bbc7:0:1::320;
@@ -1492,6 +1496,7 @@ deny 45.12.3.80;
 deny 45.128.133.242;
 deny 45.132.246.245;
 deny 45.134.225.36;
+deny 45.137.99.14;
 deny 45.138.16.107;
 deny 45.138.16.113;
 deny 45.138.16.178;
@@ -1730,7 +1735,6 @@ deny 95.142.161.63;
 deny 95.143.193.125;
 deny 95.168.173.143;
 deny 95.211.174.137;
-deny 95.211.244.28;
 deny 96.126.98.146;
 deny 96.66.15.152;
 deny 98.128.173.33;
