--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -76,6 +76,7 @@ allow 107.189.31.33;
 allow 107.189.4.12;
 allow 107.189.4.209;
 allow 107.189.5.121;
+allow 107.189.5.249;
 allow 107.189.5.7;
 allow 107.189.6.124;
 allow 107.189.7.141;
@@ -898,6 +899,7 @@ allow 23.154.177.5;
 allow 23.154.177.6;
 allow 23.154.177.7;
 allow 23.154.177.8;
+allow 23.154.177.9;
 allow 23.155.8.104;
 allow 23.184.48.254;
 allow 23.184.48.78;
@@ -1125,6 +1127,7 @@ allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:105:78fc::1;
 allow 2a04:52c0:105:98a3::1;
+allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394::1;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -1472,6 +1475,7 @@ allow 2a12:a800:2:1:45:80:158:23;
 allow 2a12:a800:2:1:45:80:158:27;
 allow 2a12:a800:2:1:45:80:158:69;
 allow 2a13:d207:0:461::1;
+allow 2a14:3f87:6ba0:16::a;
 allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.220.75.237;
@@ -1552,6 +1556,7 @@ allow 45.80.158.27;
 allow 45.80.158.69;
 allow 45.8.22.207;
 allow 45.83.104.137;
+allow 45.83.21.193;
 allow 45.84.107.101;
 allow 45.84.107.172;
 allow 45.84.107.182;
@@ -1562,6 +1567,7 @@ allow 45.84.107.47;
 allow 45.84.107.55;
 allow 45.84.107.74;
 allow 45.84.107.76;
+allow 45.90.186.35;
 allow 45.9.148.50;
 allow 45.94.31.68;
 allow 45.95.169.100;
@@ -1584,6 +1590,7 @@ allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.255.100.219;
 allow 5.255.100.227;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.235;
@@ -1735,6 +1742,7 @@ allow 95.142.161.63;
 allow 95.143.193.125;
 allow 95.168.173.143;
 allow 95.211.174.137;
+allow 95.211.244.28;
 allow 96.126.98.146;
 allow 96.66.15.152;
 allow 98.128.173.33;
