--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -319,6 +319,7 @@ deny 2a04:52c0:104:4735::1;
 deny 2a04:52c0:104:ad97::1;
 deny 2a04:52c0:105:78fc::1;
 deny 2a04:52c0:105:98a3::1;
+deny 2a04:52c0:105:d7eb::1;
 deny 2a04:52c0:106:394::1;
 deny 2a04:52c0:106:d219::1;
 deny 2a04:52c0:108:a34f::1;
@@ -666,3 +667,4 @@ deny 2a12:a800:2:1:45:80:158:23;
 deny 2a12:a800:2:1:45:80:158:27;
 deny 2a12:a800:2:1:45:80:158:69;
 deny 2a13:d207:0:461::1;
+deny 2a14:3f87:6ba0:16::a;
