--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -263,6 +263,7 @@ allow 185.106.102.102;
 allow 185.107.57.64;
 allow 185.107.57.65;
 allow 185.107.57.66;
+allow 185.107.96.192;
 allow 185.112.144.11;
 allow 185.112.146.167;
 allow 185.113.128.30;
@@ -611,6 +612,7 @@ allow 192.42.116.27;
 allow 192.42.116.28;
 allow 192.99.149.111;
 allow 193.105.134.150;
+allow 193.105.134.155;
 allow 193.189.100.194;
 allow 193.189.100.195;
 allow 193.189.100.196;
@@ -874,7 +876,6 @@ allow 23.154.177.10;
 allow 23.154.177.11;
 allow 23.154.177.12;
 allow 23.154.177.13;
-allow 23.154.177.14;
 allow 23.154.177.15;
 allow 23.154.177.16;
 allow 23.154.177.17;
@@ -1370,6 +1371,7 @@ allow 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 allow 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:e300::23;
+allow 2a0d:8140:1fff:4a9a::1;
 allow 2a0d:bbc7:0:1::1df;
 allow 2a0d:bbc7:0:1::254;
 allow 2a0d:bbc7:0:1::320;
@@ -1501,6 +1503,7 @@ allow 45.12.3.80;
 allow 45.128.133.242;
 allow 45.132.246.245;
 allow 45.134.225.36;
+allow 45.137.99.14;
 allow 45.138.16.107;
 allow 45.138.16.113;
 allow 45.138.16.178;
@@ -1644,6 +1647,7 @@ allow 72.14.179.10;
 allow 72.211.49.235;
 allow 72.235.129.116;
 allow 74.82.47.194;
+allow 74.91.123.105;
 allow 77.48.28.239;
 allow 77.81.247.72;
 allow 78.142.18.219;
@@ -1657,7 +1661,6 @@ allow 80.94.92.84;
 allow 80.94.92.92;
 allow 81.16.33.42;
 allow 81.17.28.95;
-allow 82.153.138.17;
 allow 82.197.182.161;
 allow 82.221.128.191;
 allow 82.221.131.5;
