--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -208,7 +208,6 @@ deny 173.0.3.111;
 deny 173.237.206.68;
 deny 173.249.57.253;
 deny 173.255.198.243;
-deny 173.44.141.34;
 deny 176.118.193.33;
 deny 176.121.81.51;
 deny 176.58.100.98;
@@ -860,6 +859,7 @@ deny 23.153.248.33;
 deny 23.153.248.34;
 deny 23.154.177.10;
 deny 23.154.177.11;
+deny 23.154.177.12;
 deny 23.154.177.13;
 deny 23.154.177.14;
 deny 23.154.177.15;
@@ -1128,7 +1128,6 @@ deny 2a04:52c0:126:3ab8::1;
 deny 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 deny 2a04:52c0:129:2098::1;
 deny 2a04:52c0:130:896e::1;
-deny 2a04:9dc0:31::c0cc:4d;
 deny 2a05:541:110:20::1;
 deny 2a05:541:110:3e::1;
 deny 2a05:541:112:31::1;
@@ -1168,7 +1167,6 @@ deny 2a09:61c0::22;
 deny 2a09:61c0::beef;
 deny 2a09:b280:fe01:61::a;
 deny 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
-deny 2a0b:7140:8:1:5054:ff:fe43:9f9;
 deny 2a0b:f4c2::;
 deny 2a0b:f4c2::1;
 deny 2a0b:f4c2::10;
@@ -1343,6 +1341,7 @@ deny 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 deny 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 deny 2a0c:5cc0:1:1::293c:1518;
 deny 2a0c:e300::23;
+deny 2a0d:8140:1fff:4a9a::1;
 deny 2a0d:bbc7:0:1::1df;
 deny 2a0d:bbc7:0:1::254;
 deny 2a0d:bbc7:0:1::320;
@@ -1474,6 +1473,7 @@ deny 45.12.3.80;
 deny 45.128.133.242;
 deny 45.132.246.245;
 deny 45.134.225.36;
+deny 45.137.99.14;
 deny 45.138.16.107;
 deny 45.138.16.113;
 deny 45.138.16.178;
@@ -1529,6 +1529,7 @@ deny 45.80.158.27;
 deny 45.80.158.69;
 deny 45.8.22.207;
 deny 45.83.104.137;
+deny 45.83.21.193;
 deny 45.84.107.101;
 deny 45.84.107.172;
 deny 45.84.107.182;
@@ -1639,7 +1640,6 @@ deny 82.221.131.86;
 deny 82.221.139.190;
 deny 83.217.9.73;
 deny 83.96.213.63;
-deny 83.97.20.77;
 deny 84.16.224.227;
 deny 84.211.226.13;
 deny 84.239.46.144;
