--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -155,7 +155,6 @@ allow 2605:6400:10:75:1585:9b71:1c16:b1a1;
 allow 2605:6400:10:8a2:de49:ffd1:46f5:99a2;
 allow 2605:6400:10:984:41e7:4ad6:a11e:cdcc;
 allow 2605:6400:10:aa1:2db8:1c14:2191:4aa8;
-allow 2605:6400:20:117a:2605:6400:20:117a;
 allow 2605:6400:20:1a8:f5f2:4a28:b5ed:931d;
 allow 2605:6400:20:2417::69;
 allow 2605:6400:20:3ea:c2a3:1162:7224:e5df;
@@ -227,6 +226,7 @@ allow 2607:5300:205:200::4894;
 allow 2607:5300:60:566f::1;
 allow 2607:5300:61:785::;
 allow 2607:5300:61:785:1:2:3:4;
+allow 2607:5501:3000:1dc::2;
 allow 2607:a680:3:f024::6b9d;
 allow 2607:f130:0:ed:216:3cff:febd:3b42;
 allow 2607:f530:8002::19;
@@ -549,6 +549,7 @@ allow 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 allow 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:e300::23;
+allow 2a0d:8140:1fff:4a9a::1;
 allow 2a0d:bbc7:0:1::1df;
 allow 2a0d:bbc7:0:1::254;
 allow 2a0d:bbc7:0:1::320;
