--- a/set_real_ip_from-tor_ips_v4.conf
+++ b/set_real_ip_from-tor_ips_v4.conf
@@ -12,6 +12,7 @@ set_real_ip_from 103.251.167.20;
 set_real_ip_from 104.167.242.116;
 set_real_ip_from 104.167.242.117;
 set_real_ip_from 104.167.242.118;
+set_real_ip_from 104.168.144.253;
 set_real_ip_from 104.192.3.74;
 set_real_ip_from 104.219.236.100;
 set_real_ip_from 104.244.72.115;
@@ -816,6 +817,7 @@ set_real_ip_from 45.12.3.80;
 set_real_ip_from 45.128.133.242;
 set_real_ip_from 45.132.246.245;
 set_real_ip_from 45.134.225.36;
+set_real_ip_from 45.137.99.14;
 set_real_ip_from 45.138.16.107;
 set_real_ip_from 45.138.16.113;
 set_real_ip_from 45.138.16.178;
