Update lists at 20250213-1200

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -12,7 +12,6 @@ allow 103.251.167.20;
 allow 104.167.242.116;
 allow 104.167.242.117;
 allow 104.167.242.118;
-allow 104.168.144.253;
 allow 104.192.3.74;
 allow 104.219.236.100;
 allow 104.244.72.115;
@@ -132,6 +131,7 @@ allow 138.59.18.110;
 allow 139.99.172.11;
 allow 139.99.8.57;
 allow 141.147.97.190;
+allow 141.164.38.67;
 allow 141.98.11.62;
 allow 142.171.12.88;
 allow 142.44.133.81;
@@ -205,7 +205,6 @@ allow 172.81.131.110;
 allow 172.81.131.139;
 allow 172.81.131.156;
 allow 172.81.132.94;
-allow 172.96.137.142;
 allow 173.0.3.111;
 allow 173.237.206.68;
 allow 173.249.57.253;
@@ -292,6 +291,7 @@ allow 185.130.47.58;
 allow 185.132.53.12;
 allow 185.14.31.113;
 allow 185.146.232.234;
+allow 185.150.28.13;
 allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
@@ -614,10 +614,7 @@ allow 193.189.100.204;
 allow 193.189.100.205;
 allow 193.189.100.206;
 allow 193.218.118.137;
-allow 193.218.118.173;
-allow 193.218.118.178;
 allow 193.218.118.182;
-allow 193.218.118.188;
 allow 193.218.118.89;
 allow 193.237.221.228;
 allow 193.239.232.102;
@@ -949,6 +946,7 @@ allow 2605:6400:10:75:1585:9b71:1c16:b1a1;
 allow 2605:6400:10:8a2:de49:ffd1:46f5:99a2;
 allow 2605:6400:10:984:41e7:4ad6:a11e:cdcc;
 allow 2605:6400:10:aa1:2db8:1c14:2191:4aa8;
+allow 2605:6400:20:117a:2605:6400:20:117a;
 allow 2605:6400:20:1a8:f5f2:4a28:b5ed:931d;
 allow 2605:6400:20:2417::69;
 allow 2605:6400:20:3ea:c2a3:1162:7224:e5df;
@@ -1020,8 +1018,6 @@ allow 2607:5300:205:200::4894;
 allow 2607:5300:60:566f::1;
 allow 2607:5300:61:785::;
 allow 2607:5300:61:785:1:2:3:4;
-allow 2607:5501:3000:1dc::2;
-allow 2607:a680:3:f024::6b9d;
 allow 2607:f130:0:ed:216:3cff:febd:3b42;
 allow 2607:f530:8002::19;
 allow 2620:18c:0:192::171;
@@ -1161,6 +1157,7 @@ allow 2a06:8781::9;
 allow 2a06:d380:0:103::62;
 allow 2a06:d380:0:103::63;
 allow 2a06:e80:3000:1:bad:babe:ca11:911;
+allow 2a07:6d80:1e01:3a13::;
 allow 2a07:e03:2a::bcde;
 allow 2a07:e042:1:181::1;
 allow 2a07:e042:1:182::1;
@@ -1389,10 +1386,7 @@ allow 2a0f:df00:0:255::204;
 allow 2a0f:df00:0:255::205;
 allow 2a0f:df00:0:255::206;
 allow 2a0f:e586:f:f::182;
-allow 2a0f:e586:f:f::188;
-allow 2a0f:e586:f:f:a052:2166:bef9:a432;
 allow 2a0f:e586:f:f:baa4:d491:90be:dca5;
-allow 2a0f:e586:f:f:c94a:de42:aac1:9045;
 allow 2a0f:e586:f:f:fca1:db52:9055:cff3;
 allow 2a10:1fc0:1::c758:3168;
 allow 2a10:8a40:f313::29;
@@ -1628,7 +1622,6 @@ allow 80.94.92.84;
 allow 80.94.92.92;
 allow 81.16.33.42;
 allow 81.17.28.95;
-allow 82.153.138.17;
 allow 82.197.182.161;
 allow 82.221.128.191;
 allow 82.221.131.5;
