Update lists at 20250217-0000

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -101,6 +101,7 @@ allow 109.169.33.163;
 allow 109.199.101.106;
 allow 109.199.101.134;
 allow 109.199.105.142;
+allow 109.228.160.26;
 allow 109.69.67.17;
 allow 109.70.100.1;
 allow 109.70.100.2;
@@ -155,7 +156,6 @@ allow 152.53.53.243;
 allow 154.16.116.61;
 allow 154.26.159.157;
 allow 156.229.232.101;
-allow 156.229.232.104;
 allow 156.229.232.108;
 allow 156.229.232.115;
 allow 156.229.232.54;
@@ -327,18 +327,7 @@ allow 185.220.100.255;
 allow 185.220.101.0;
 allow 185.220.101.1;
 allow 185.220.101.10;
-allow 185.220.101.100;
-allow 185.220.101.101;
-allow 185.220.101.102;
-allow 185.220.101.103;
-allow 185.220.101.104;
-allow 185.220.101.105;
-allow 185.220.101.106;
-allow 185.220.101.107;
-allow 185.220.101.108;
-allow 185.220.101.109;
 allow 185.220.101.11;
-allow 185.220.101.110;
 allow 185.220.101.12;
 allow 185.220.101.129;
 allow 185.220.101.13;
@@ -479,10 +468,6 @@ allow 185.220.101.82;
 allow 185.220.101.83;
 allow 185.220.101.84;
 allow 185.220.101.9;
-allow 185.220.101.96;
-allow 185.220.101.97;
-allow 185.220.101.98;
-allow 185.220.101.99;
 allow 185.220.103.4;
 allow 185.220.103.5;
 allow 185.220.103.6;
@@ -1139,7 +1124,6 @@ allow 2a05:541:112:31::1;
 allow 2a05:541:122:49::1;
 allow 2a05:b0c7:6388::1;
 allow 2a05:b0c7:655b::1;
-allow 2a05:b0c7:67c6::1;
 allow 2a05:b0c7:6949::1;
 allow 2a05:b0c7:6bd4::1;
 allow 2a05:b0c7:6cc4::1;
@@ -1329,21 +1313,6 @@ allow 2a0b:f4c2:3::82;
 allow 2a0b:f4c2:3::83;
 allow 2a0b:f4c2:3::84;
 allow 2a0b:f4c2::4;
-allow 2a0b:f4c2:4::100;
-allow 2a0b:f4c2:4::101;
-allow 2a0b:f4c2:4::102;
-allow 2a0b:f4c2:4::103;
-allow 2a0b:f4c2:4::104;
-allow 2a0b:f4c2:4::105;
-allow 2a0b:f4c2:4::106;
-allow 2a0b:f4c2:4::107;
-allow 2a0b:f4c2:4::108;
-allow 2a0b:f4c2:4::109;
-allow 2a0b:f4c2:4::110;
-allow 2a0b:f4c2:4::96;
-allow 2a0b:f4c2:4::97;
-allow 2a0b:f4c2:4::98;
-allow 2a0b:f4c2:4::99;
 allow 2a0b:f4c2::5;
 allow 2a0b:f4c2::6;
 allow 2a0b:f4c2::7;
@@ -1366,6 +1335,7 @@ allow 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 allow 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:e300::23;
+allow 2a0d:8140:1fff:4a9a::1;
 allow 2a0d:bbc7:0:1::10a;
 allow 2a0d:bbc7:0:1::1df;
 allow 2a0d:bbc7:0:1::254;
@@ -1493,6 +1463,7 @@ allow 45.12.3.80;
 allow 45.128.133.242;
 allow 45.132.246.245;
 allow 45.134.225.36;
+allow 45.137.99.14;
 allow 45.138.16.107;
 allow 45.138.16.113;
 allow 45.138.16.178;
@@ -1660,7 +1631,6 @@ allow 83.97.20.77;
 allow 84.16.224.227;
 allow 84.211.226.13;
 allow 84.239.46.144;
-allow 84.247.165.51;
 allow 84.247.183.128;
 allow 85.239.41.130;
 allow 85.93.218.204;
