--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -101,6 +101,7 @@ deny 109.169.33.163;
 deny 109.199.101.106;
 deny 109.199.101.134;
 deny 109.199.105.142;
+deny 109.228.160.26;
 deny 109.69.67.17;
 deny 109.70.100.1;
 deny 109.70.100.2;
@@ -155,7 +156,6 @@ deny 152.53.53.243;
 deny 154.16.116.61;
 deny 154.26.159.157;
 deny 156.229.232.101;
-deny 156.229.232.104;
 deny 156.229.232.108;
 deny 156.229.232.115;
 deny 156.229.232.54;
@@ -327,18 +327,7 @@ deny 185.220.100.255;
 deny 185.220.101.0;
 deny 185.220.101.1;
 deny 185.220.101.10;
-deny 185.220.101.100;
-deny 185.220.101.101;
-deny 185.220.101.102;
-deny 185.220.101.103;
-deny 185.220.101.104;
-deny 185.220.101.105;
-deny 185.220.101.106;
-deny 185.220.101.107;
-deny 185.220.101.108;
-deny 185.220.101.109;
 deny 185.220.101.11;
-deny 185.220.101.110;
 deny 185.220.101.12;
 deny 185.220.101.129;
 deny 185.220.101.13;
@@ -479,10 +468,6 @@ deny 185.220.101.82;
 deny 185.220.101.83;
 deny 185.220.101.84;
 deny 185.220.101.9;
-deny 185.220.101.96;
-deny 185.220.101.97;
-deny 185.220.101.98;
-deny 185.220.101.99;
 deny 185.220.103.4;
 deny 185.220.103.5;
 deny 185.220.103.6;
@@ -1139,7 +1124,6 @@ deny 2a05:541:112:31::1;
 deny 2a05:541:122:49::1;
 deny 2a05:b0c7:6388::1;
 deny 2a05:b0c7:655b::1;
-deny 2a05:b0c7:67c6::1;
 deny 2a05:b0c7:6949::1;
 deny 2a05:b0c7:6bd4::1;
 deny 2a05:b0c7:6cc4::1;
@@ -1329,21 +1313,6 @@ deny 2a0b:f4c2:3::82;
 deny 2a0b:f4c2:3::83;
 deny 2a0b:f4c2:3::84;
 deny 2a0b:f4c2::4;
-deny 2a0b:f4c2:4::100;
-deny 2a0b:f4c2:4::101;
-deny 2a0b:f4c2:4::102;
-deny 2a0b:f4c2:4::103;
-deny 2a0b:f4c2:4::104;
-deny 2a0b:f4c2:4::105;
-deny 2a0b:f4c2:4::106;
-deny 2a0b:f4c2:4::107;
-deny 2a0b:f4c2:4::108;
-deny 2a0b:f4c2:4::109;
-deny 2a0b:f4c2:4::110;
-deny 2a0b:f4c2:4::96;
-deny 2a0b:f4c2:4::97;
-deny 2a0b:f4c2:4::98;
-deny 2a0b:f4c2:4::99;
 deny 2a0b:f4c2::5;
 deny 2a0b:f4c2::6;
 deny 2a0b:f4c2::7;
@@ -1366,6 +1335,7 @@ deny 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 deny 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 deny 2a0c:5cc0:1:1::293c:1518;
 deny 2a0c:e300::23;
+deny 2a0d:8140:1fff:4a9a::1;
 deny 2a0d:bbc7:0:1::10a;
 deny 2a0d:bbc7:0:1::1df;
 deny 2a0d:bbc7:0:1::254;
@@ -1493,6 +1463,7 @@ deny 45.12.3.80;
 deny 45.128.133.242;
 deny 45.132.246.245;
 deny 45.134.225.36;
+deny 45.137.99.14;
 deny 45.138.16.107;
 deny 45.138.16.113;
 deny 45.138.16.178;
@@ -1660,7 +1631,6 @@ deny 83.97.20.77;
 deny 84.16.224.227;
 deny 84.211.226.13;
 deny 84.239.46.144;
-deny 84.247.165.51;
 deny 84.247.183.128;
 deny 85.239.41.130;
 deny 85.93.218.204;
