Update lists at 20250219-0000

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -117,6 +117,7 @@ allow 109.70.100.71;
 allow 114.35.245.150;
 allow 118.163.74.160;
 allow 121.127.37.151;
+allow 121.78.28.166;
 allow 123.253.35.32;
 allow 125.212.241.131;
 allow 128.127.180.156;
@@ -147,6 +148,7 @@ allow 149.202.79.101;
 allow 149.202.79.129;
 allow 149.56.22.133;
 allow 149.56.44.47;
+allow 150.241.67.214;
 allow 152.53.133.14;
 allow 152.53.53.243;
 allow 154.16.116.61;
@@ -635,18 +637,17 @@ allow 193.32.162.96;
 allow 193.36.132.21;
 allow 193.36.38.126;
 allow 193.41.226.117;
-allow 193.43.72.23;
 allow 193.70.80.213;
 allow 194.15.112.133;
 allow 194.15.113.118;
 allow 194.15.115.212;
 allow 194.156.103.16;
-allow 194.163.130.99;
 allow 194.163.157.49;
 allow 194.26.192.161;
 allow 194.26.192.77;
 allow 195.176.3.23;
 allow 195.176.3.24;
+allow 195.211.124.29;
 allow 195.26.245.180;
 allow 195.47.238.176;
 allow 195.47.238.177;
@@ -866,7 +867,6 @@ allow 23.153.248.34;
 allow 23.154.177.10;
 allow 23.154.177.11;
 allow 23.154.177.12;
-allow 23.154.177.13;
 allow 23.154.177.14;
 allow 23.154.177.15;
 allow 23.154.177.16;
@@ -1067,7 +1067,6 @@ allow 2a02:898:218::1;
 allow 2a02:898:218::2;
 allow 2a02:c204:2195:2012::1;
 allow 2a02:c204:2220:8710::1;
-allow 2a02:c206:2240:8448::1;
 allow 2a02:c206:2241:2588::1;
 allow 2a02:ec0:209:10::4;
 allow 2a02:ed06::222;
@@ -1162,6 +1161,7 @@ allow 2a09:61c0::21;
 allow 2a09:61c0::22;
 allow 2a09:b280:fe01:61::a;
 allow 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
+allow 2a0b:4140:c647::2;
 allow 2a0b:64c0:11:0:be24:11ff:fe12:2ad2;
 allow 2a0b:7140:8:1:5054:ff:fe43:9f9;
 allow 2a0b:f4c0:16c:10::1;
@@ -1455,7 +1455,6 @@ allow 2a12:a800:2:1:45:80:158:205;
 allow 2a12:a800:2:1:45:80:158:23;
 allow 2a12:a800:2:1:45:80:158:27;
 allow 2a12:a800:2:1:45:80:158:69;
-allow 2a13:7c00:3:12:f816:3eff:fea3:67db;
 allow 2a13:d207:0:461::1;
 allow 31.129.22.65;
 allow 31.133.0.210;
