--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -266,7 +266,6 @@ deny 2a02:898:218::1;
 deny 2a02:898:218::2;
 deny 2a02:c204:2195:2012::1;
 deny 2a02:c204:2220:8710::1;
-deny 2a02:c206:2240:8448::1;
 deny 2a02:c206:2241:2588::1;
 deny 2a02:ec0:209:10::4;
 deny 2a02:ed06::222;
@@ -361,6 +360,7 @@ deny 2a09:61c0::21;
 deny 2a09:61c0::22;
 deny 2a09:b280:fe01:61::a;
 deny 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
+deny 2a0b:4140:c647::2;
 deny 2a0b:64c0:11:0:be24:11ff:fe12:2ad2;
 deny 2a0b:7140:8:1:5054:ff:fe43:9f9;
 deny 2a0b:f4c0:16c:10::1;
@@ -654,5 +654,4 @@ deny 2a12:a800:2:1:45:80:158:205;
 deny 2a12:a800:2:1:45:80:158:23;
 deny 2a12:a800:2:1:45:80:158:27;
 deny 2a12:a800:2:1:45:80:158:69;
-deny 2a13:7c00:3:12:f816:3eff:fea3:67db;
 deny 2a13:d207:0:461::1;
