--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -148,7 +148,6 @@ deny 149.202.79.101;
 deny 149.202.79.129;
 deny 149.56.22.133;
 deny 149.56.44.47;
-deny 150.241.67.214;
 deny 152.53.133.14;
 deny 152.53.53.243;
 deny 154.16.116.61;
@@ -159,7 +158,6 @@ deny 156.229.232.115;
 deny 156.229.232.54;
 deny 156.229.232.98;
 deny 156.229.233.92;
-deny 158.220.123.219;
 deny 158.69.252.116;
 deny 160.119.249.240;
 deny 162.210.173.17;
@@ -516,6 +514,7 @@ deny 185.246.189.99;
 deny 185.246.84.179;
 deny 185.247.184.105;
 deny 185.247.184.33;
+deny 185.247.226.175;
 deny 185.252.232.218;
 deny 185.254.196.141;
 deny 185.34.33.2;
@@ -645,6 +644,7 @@ deny 194.156.103.16;
 deny 194.163.157.49;
 deny 194.26.192.161;
 deny 194.26.192.77;
+deny 195.160.220.104;
 deny 195.176.3.23;
 deny 195.176.3.24;
 deny 195.211.124.29;
@@ -867,6 +867,7 @@ deny 23.153.248.34;
 deny 23.154.177.10;
 deny 23.154.177.11;
 deny 23.154.177.12;
+deny 23.154.177.13;
 deny 23.154.177.14;
 deny 23.154.177.15;
 deny 23.154.177.16;
@@ -1067,7 +1068,6 @@ deny 2a02:898:218::1;
 deny 2a02:898:218::2;
 deny 2a02:c204:2195:2012::1;
 deny 2a02:c204:2220:8710::1;
-deny 2a02:c206:2241:2588::1;
 deny 2a02:ec0:209:10::4;
 deny 2a02:ed06::222;
 deny 2a03:4000:13:7c3:dead:beef:ca1f:1337;
@@ -1115,6 +1115,7 @@ deny 2a04:52c0:104:31e6::1;
 deny 2a04:52c0:104:4735::1;
 deny 2a04:52c0:104:ad97::1;
 deny 2a04:52c0:105:98a3::1;
+deny 2a04:52c0:105:d7eb::1;
 deny 2a04:52c0:108:a34f::1;
 deny 2a04:52c0:116:e0e3::1;
 deny 2a04:52c0:119:3f0b::1;
@@ -1122,6 +1123,7 @@ deny 2a04:52c0:123:c6c3::1;
 deny 2a04:52c0:126:3ab8::1;
 deny 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 deny 2a04:52c0:130:896e::1;
+deny 2a04:9dc0:31::c0cc:4d;
 deny 2a05:541:110:20::1;
 deny 2a05:541:110:3e::1;
 deny 2a05:541:112:31::1;
@@ -1161,7 +1163,6 @@ deny 2a09:61c0::21;
 deny 2a09:61c0::22;
 deny 2a09:b280:fe01:61::a;
 deny 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
-deny 2a0b:4140:c647::2;
 deny 2a0b:64c0:11:0:be24:11ff:fe12:2ad2;
 deny 2a0b:7140:8:1:5054:ff:fe43:9f9;
 deny 2a0b:f4c0:16c:10::1;
@@ -1405,6 +1406,7 @@ deny 2a10:1fc0:1::c758:3168;
 deny 2a10:8a40:f313::29;
 deny 2a10:c800:1:9cc6::1;
 deny 2a10:c800:1:f7f8:0:1ce:1ce:babe;
+deny 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 deny 2a12:a800:1:1:194:26:192:161;
 deny 2a12:a800:1:1:194:26:192:77;
 deny 2a12:a800:1:1:2:58:56:220;
@@ -1530,6 +1532,7 @@ deny 45.66.35.31;
 deny 45.66.35.32;
 deny 45.66.35.33;
 deny 45.66.35.34;
+deny 45.66.35.35;
 deny 45.79.144.222;
 deny 45.80.158.205;
 deny 45.80.158.23;
@@ -1573,6 +1576,7 @@ deny 51.91.18.151;
 deny 5.196.95.34;
 deny 5.230.174.6;
 deny 5.255.100.227;
+deny 5.255.100.26;
 deny 5.255.103.235;
 deny 5.255.104.202;
 deny 5.255.111.64;
@@ -1643,6 +1647,7 @@ deny 82.221.131.5;
 deny 82.221.139.190;
 deny 83.217.9.73;
 deny 83.96.213.63;
+deny 83.97.20.77;
 deny 84.16.224.227;
 deny 84.211.226.13;
 deny 84.239.46.144;
