Update lists at 20250219-1501

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -206,6 +206,7 @@ allow 172.81.132.94;
 allow 172.86.109.84;
 allow 173.0.3.111;
 allow 173.237.206.68;
+allow 173.249.57.253;
 allow 173.255.198.243;
 allow 173.44.141.34;
 allow 176.118.193.33;
@@ -1069,6 +1070,8 @@ allow 2a02:898:218::1;
 allow 2a02:898:218::2;
 allow 2a02:c204:2195:2012::1;
 allow 2a02:c204:2220:8710::1;
+allow 2a02:c206:2240:3516::1;
+allow 2a02:c207:3002:8283::1;
 allow 2a02:ec0:209:10::4;
 allow 2a02:ed06::222;
 allow 2a03:4000:13:7c3:dead:beef:ca1f:1337;
@@ -1116,7 +1119,6 @@ allow 2a04:52c0:104:31e6::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:105:98a3::1;
-allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:108:a34f::1;
 allow 2a04:52c0:116:e0e3::1;
 allow 2a04:52c0:119:3f0b::1;
@@ -1357,7 +1359,6 @@ allow 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 allow 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:e300::23;
-allow 2a0d:8140:1fff:4a9a::1;
 allow 2a0d:bbc7:0:1::10a;
 allow 2a0d:bbc7:0:1::1df;
 allow 2a0d:bbc7:0:1::254;
@@ -1486,7 +1487,6 @@ allow 45.12.3.80;
 allow 45.128.133.242;
 allow 45.132.246.245;
 allow 45.134.225.36;
-allow 45.137.99.14;
 allow 45.138.16.107;
 allow 45.138.16.113;
 allow 45.138.16.178;
@@ -1544,7 +1544,6 @@ allow 45.80.158.27;
 allow 45.80.158.69;
 allow 45.8.22.207;
 allow 45.83.104.137;
-allow 45.83.21.193;
 allow 45.84.107.101;
 allow 45.84.107.128;
 allow 45.84.107.17;
@@ -1581,7 +1580,6 @@ allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.230.174.6;
 allow 5.255.100.227;
-allow 5.255.100.26;
 allow 5.255.103.235;
 allow 5.255.104.202;
 allow 5.255.111.64;
@@ -1656,6 +1654,7 @@ allow 83.97.20.77;
 allow 84.16.224.227;
 allow 84.211.226.13;
 allow 84.239.46.144;
+allow 84.247.183.128;
 allow 85.239.41.130;
 allow 85.93.218.204;
 allow 86.54.28.49;
@@ -1673,6 +1672,7 @@ allow 88.80.26.4;
 allow 89.147.108.63;
 allow 89.147.108.90;
 allow 89.147.110.118;
+allow 89.147.110.154;
 allow 89.147.110.82;
 allow 89.147.111.87;
 allow 89.221.215.139;
