--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -206,6 +206,7 @@ deny 172.81.132.94;
 deny 172.86.109.84;
 deny 173.0.3.111;
 deny 173.237.206.68;
+deny 173.249.57.253;
 deny 173.255.198.243;
 deny 173.44.141.34;
 deny 176.118.193.33;
@@ -1069,6 +1070,8 @@ deny 2a02:898:218::1;
 deny 2a02:898:218::2;
 deny 2a02:c204:2195:2012::1;
 deny 2a02:c204:2220:8710::1;
+deny 2a02:c206:2240:3516::1;
+deny 2a02:c207:3002:8283::1;
 deny 2a02:ec0:209:10::4;
 deny 2a02:ed06::222;
 deny 2a03:4000:13:7c3:dead:beef:ca1f:1337;
@@ -1116,7 +1119,6 @@ deny 2a04:52c0:104:31e6::1;
 deny 2a04:52c0:104:4735::1;
 deny 2a04:52c0:104:ad97::1;
 deny 2a04:52c0:105:98a3::1;
-deny 2a04:52c0:105:d7eb::1;
 deny 2a04:52c0:108:a34f::1;
 deny 2a04:52c0:116:e0e3::1;
 deny 2a04:52c0:119:3f0b::1;
@@ -1357,7 +1359,6 @@ deny 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 deny 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 deny 2a0c:5cc0:1:1::293c:1518;
 deny 2a0c:e300::23;
-deny 2a0d:8140:1fff:4a9a::1;
 deny 2a0d:bbc7:0:1::10a;
 deny 2a0d:bbc7:0:1::1df;
 deny 2a0d:bbc7:0:1::254;
@@ -1486,7 +1487,6 @@ deny 45.12.3.80;
 deny 45.128.133.242;
 deny 45.132.246.245;
 deny 45.134.225.36;
-deny 45.137.99.14;
 deny 45.138.16.107;
 deny 45.138.16.113;
 deny 45.138.16.178;
@@ -1544,7 +1544,6 @@ deny 45.80.158.27;
 deny 45.80.158.69;
 deny 45.8.22.207;
 deny 45.83.104.137;
-deny 45.83.21.193;
 deny 45.84.107.101;
 deny 45.84.107.128;
 deny 45.84.107.17;
@@ -1581,7 +1580,6 @@ deny 51.91.18.151;
 deny 5.196.95.34;
 deny 5.230.174.6;
 deny 5.255.100.227;
-deny 5.255.100.26;
 deny 5.255.103.235;
 deny 5.255.104.202;
 deny 5.255.111.64;
@@ -1656,6 +1654,7 @@ deny 83.97.20.77;
 deny 84.16.224.227;
 deny 84.211.226.13;
 deny 84.239.46.144;
+deny 84.247.183.128;
 deny 85.239.41.130;
 deny 85.93.218.204;
 deny 86.54.28.49;
@@ -1673,6 +1672,7 @@ deny 88.80.26.4;
 deny 89.147.108.63;
 deny 89.147.108.90;
 deny 89.147.110.118;
+deny 89.147.110.154;
 deny 89.147.110.82;
 deny 89.147.111.87;
 deny 89.221.215.139;
