Update lists at 20250219-2100

--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -256,7 +256,6 @@ allow 2a01:6340:2:501::10;
 allow 2a01:6340:2:501::20;
 allow 2a01:7e00::f03c:91ff:fe56:2656;
 allow 2a01:7e00::f03c:91ff:fe78:b382;
-allow 2a02:16d0:0:5::1;
 allow 2a02:2970:1001::4b;
 allow 2a02:2b88:2:48b::1;
 allow 2a02:2b88:2:6ce::1;
@@ -270,6 +269,7 @@ allow 2a02:c206:2240:3516::1;
 allow 2a02:c206:2240:5051::1;
 allow 2a02:c206:2240:5054::1;
 allow 2a02:c206:2240:5264::1;
+allow 2a02:c206:2240:8448::1;
 allow 2a02:c207:3002:8283::1;
 allow 2a02:ec0:209:10::4;
 allow 2a02:ed06::222;
