--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -103,7 +103,6 @@ set_real_ip_from 109.199.101.106;
 set_real_ip_from 109.199.101.134;
 set_real_ip_from 109.199.105.142;
 set_real_ip_from 109.228.160.26;
-set_real_ip_from 109.69.67.17;
 set_real_ip_from 109.70.100.1;
 set_real_ip_from 109.70.100.2;
 set_real_ip_from 109.70.100.3;
@@ -307,6 +306,7 @@ set_real_ip_from 185.191.204.254;
 set_real_ip_from 185.193.52.180;
 set_real_ip_from 185.195.236.55;
 set_real_ip_from 185.195.71.244;
+set_real_ip_from 185.196.10.184;
 set_real_ip_from 185.207.107.130;
 set_real_ip_from 185.207.107.216;
 set_real_ip_from 185.220.100.240;
@@ -645,6 +645,7 @@ set_real_ip_from 194.15.112.133;
 set_real_ip_from 194.15.113.118;
 set_real_ip_from 194.15.115.212;
 set_real_ip_from 194.156.103.16;
+set_real_ip_from 194.163.130.99;
 set_real_ip_from 194.163.157.49;
 set_real_ip_from 194.26.192.161;
 set_real_ip_from 194.26.192.77;
@@ -871,7 +872,6 @@ set_real_ip_from 23.153.248.34;
 set_real_ip_from 23.154.177.10;
 set_real_ip_from 23.154.177.11;
 set_real_ip_from 23.154.177.12;
-set_real_ip_from 23.154.177.13;
 set_real_ip_from 23.154.177.14;
 set_real_ip_from 23.154.177.15;
 set_real_ip_from 23.154.177.16;
@@ -1062,7 +1062,6 @@ set_real_ip_from 2a01:6340:2:501::10;
 set_real_ip_from 2a01:6340:2:501::20;
 set_real_ip_from 2a01:7e00::f03c:91ff:fe56:2656;
 set_real_ip_from 2a01:7e00::f03c:91ff:fe78:b382;
-set_real_ip_from 2a02:16d0:0:5::1;
 set_real_ip_from 2a02:2970:1001::4b;
 set_real_ip_from 2a02:2b88:2:48b::1;
 set_real_ip_from 2a02:2b88:2:6ce::1;
@@ -1076,6 +1075,7 @@ set_real_ip_from 2a02:c206:2240:3516::1;
 set_real_ip_from 2a02:c206:2240:5051::1;
 set_real_ip_from 2a02:c206:2240:5054::1;
 set_real_ip_from 2a02:c206:2240:5264::1;
+set_real_ip_from 2a02:c206:2240:8448::1;
 set_real_ip_from 2a02:c207:3002:8283::1;
 set_real_ip_from 2a02:ec0:209:10::4;
 set_real_ip_from 2a02:ed06::222;
@@ -1651,7 +1651,6 @@ set_real_ip_from 80.94.92.84;
 set_real_ip_from 80.94.92.92;
 set_real_ip_from 81.16.33.42;
 set_real_ip_from 81.17.28.95;
-set_real_ip_from 81.56.50.166;
 set_real_ip_from 82.197.182.161;
 set_real_ip_from 82.221.128.191;
 set_real_ip_from 82.221.131.5;
